# aiot_2024_robot

./: AIoT 자율로봇개발_v1_240716_0711.xlsx  README.md  bashrc.txt
OpenCV/cppTest/: CMakeLists.txt  arucoMarker.cpp  corner.cpp  dnnmnist.cpp  drawText.cpp  helloOpenCV.cpp  houghlineP.cpp  keypointMatching.cpp  knn.cpp  mainclass.cpp  makefile  matOp.cpp  (+6 more)
aiot_ws/: led_test.py  my_map.pgm  my_map.yaml  servo_test.py  sync_async.bash
aiot_ws/src/my_first_rqt_plugin_pkg/: CMakeLists.txt  package.xml
aiot_ws/src/my_first_rqt_plugin_pkg/src/rqt_example/: examples.py
aiot_ws/src/rqt_example/: CMakeLists.txt  package.xml
aiot_ws/src/rqt_example/scripts/: rqt_example
aiot_ws/src/rqt_example/src/rqt_example/: examples_widget.py
artificial_intelligence/: a01_numpy.py  a02_boolindex.py  a02_broadcasting.py  a03_Dot.py  a04_fancyindexing.py  a05_pandas.py  a06_dataframe.py  a07_linear_regrex.py  a08_logistic_regrex.py  default.py
dds/: SyncAsync.xml  SyncAsyncsub.xml  fastdds_local_config.xml  fastdds_local_config_superuser.xml
project/: 계획 발표 (예시).pptx
python/: a01_keyword.py  a02_nametest.py  a03_variable_name.py  a04_operator_overriding.py  a05_print_test.py  a06_data_type.py  a07_str_indexing.py  a08_lenth_test.py  a09_int_float.py  a10_variable_definition.py  a11_operator2.py  a12_input_test.py  a13_str_format.py  a14_string_method.py  a15_booleen.py  a15_find_method.py  a17_condition_if.py  a18_datetime.py  a19_summer.py  a20_odd.py  a21_score_print.py  a22_number_analysis.py  a23_list_test.py  a24_list_test2.py  a25_range_for.py  a26_dictionary_test.py  a27_dictonary_test2.py  a28_dictionary_test3.py  a29_while_test.py  a30_list_function.py  a31_enumerate.py  a32_function_test1.py  a33_function_test2.py  a34_exception.py  a37_class_makedic.py  a39_class_dataclass.py  a40_class_method.py  a44_destructor.py  a46_property.py  a47_inheritance.py  (+6 more)
turtlebot3_simulation_file/: model.sdf  turtlebot3_burger.urdf
(+157 files in other folders)
